<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" 
	android:background="@color/background2">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="6dp"
		android:orientation="vertical"
		android:layout_gravity="center_horizontal">
    <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="Host URL :" 
    	android:textColor="@color/font"/>
    <EditText
    	android:id="@+id/host"
    	android:layout_width="match_parent"
    	android:layout_height="30dp"
    	android:ems="10"
    	android:hint=""
		android:background="@color/color_input"
		android:textColor="@color/black_alpha">
    	<requestFocus />
    </EditText>
    <TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text=" * Isi Domain tanpa menggunakan ''http://''"
        	android:textColor="@color/font"/>
    
    <Button
    	android:id="@+id/btnAdd"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="Simpan" />
	</LinearLayout>
</LinearLayout>