<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
    <item android:id="@+id/sethost"
		android:title="Setting Host" />
	<item android:id="@+id/close"
		android:title="Close" />
    
</menu>